--- a/main.html
+++ b/main.html
@@ -25,9 +25,9 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a class="a" href="#">про нас</a></li>
-                    <li> <a href="#">правила</a> </li>
-                    <li> <a href="#">на початок</a> </li>
-                    <li> <a href="#down">вниз</a> </li>
+                    <li> <a class="a"  href="#">правила</a> </li>
+                    <li> <a class="a" href="#">на початок</a> </li>
+                    <li> <a class="a" href="#down">вниз</a> </li>
                 </ul>
                  <p><a name="top"></a></p>
             </nav>
