--- a/main.html
+++ b/main.html
@@ -82,9 +82,96 @@
 
     </div>
     
+<div class="child-page-listing">
 
 
+  <div class="grid-container">
 
+    <article id="3685" class="location-listing">
+
+      <a class="location-title" href="#">
+          blender          </a>
+
+      <div class="location-image">
+        <a href="#">
+            <img width="500" height="300" src="./pages/Rectangle 12.png" alt="12 page">    </a>
+
+      </div>
+
+    </article>
+
+    <article id="3688" class="location-listing">
+
+      <a class="location-title" href="#">
+          html work         </a>
+
+      <div class="location-image">
+        <a href="#">
+            <img width="500" height="300" src="./pages/Rectangle 13.png" alt="page 13">  </a>
+
+      </div>
+
+    </article>
+
+    <article id="3691" class="location-listing">
+
+      <a class="location-title" href="#">
+         css work        </a>
+
+      <div class="location-image">
+        <a href="#">
+            <img width="500" height="300" src="./pages/Rectangle 14.png" alt="rectangle 14">  </a>
+
+      </div>
+
+    </article>
+
+    <article id="3694" class="location-listing">
+
+      <a class="location-title" href="#">
+          me in python           </a>
+
+      <div class="location-image">
+        <a href="#">
+            <img width="500" height="300" src="./pages/Rectangle 15.png" alt="rectangle 15">  </a>
+
+      </div>
+
+    </article>
+
+    <article id="3697" class="location-listing">
+
+      <a class="location-title" href="#">
+          portfolio           </a>
+
+      <div class="location-image">
+        <a href="#">
+            <img width="500" height="300" src="./pages/Rectangle 16.png" alt="rectangle 16">    </a>
+
+      </div>
+
+    </article>
+
+    <article id="3700" class="location-listing">
+
+      <a class="location-title" href="#">
+          me            </a>
+
+      <div class="location-image">
+        <a href="#">
+            <img width="500px" height="300%" src="./pages/Rectangle 17.png" alt="rectangle 17">          
+          </a>
+      </div>
+
+    </article>
+
+  </div>
+  <!-- end grid container -->
+
+</div>
+
+
+<!--h
     <div class="works-block">
         <div class="wrapper">
             <div class="grid-container">
@@ -93,8 +180,8 @@
                 <div class="work work-3"><img src="./pages/Rectangle 14.png"></div>
             </div>
         </div>
-    </div>
-
+    </div>я'    
+h-->
 
 
 <div class="body_form">
